--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@babel/preset-env": "^7.24.8",
     "@babel/preset-react": "^7.24.7",
     "@babel/preset-typescript": "^7.24.7",
+    "@svgr/webpack": "^8.1.0",
     "@types/react-dom": "^18.3.0",
     "@types/react-redux": "^7.1.34",
     "autoprefixer": "^10.4.19",
